--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="" srcset="">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="big old lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="bigger lion" title="I love lions">
   </body>
 </html>
